--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -13,7 +13,7 @@ jobs:
     env:
       ANSIBLE_USER_SSH_PUBLIC_KEY: ${{ secrets.ANSIBLE_USER_SSH_PUBLIC_KEY }}
       ANSIBLE_CONFIG: ./ansible.cfg
-      PATH: /home/runner/.local/bin:$PATH
+      # PATH: /home/runner/.local/bin:$PATH
 
     steps:
       - name: Check if running inside a container
