--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -16,24 +16,7 @@ jobs:
       # PATH: /home/runner/.local/bin:$PATH
 
     steps:
-      - name: Check if running inside a container
-        run: |
-          if [ -f /.dockerenv ]; then
-            echo "Running inside a Docker container!"
-          else
-            echo "Running on a full VM."
-          fi    
-      - name: Debug OS
-        run: |
-          echo "OS Information:"
-          uname -a
-          cat /etc/os-release || true
-          echo "Available package managers:"
-          which apt || echo "apt not found"
-          which apt-get || echo "apt-get not found"
-          which dnf || echo "dnf not found"
-          which yum || echo "yum not found"
-          which apk || echo "apk not found"          
+    
       - name: Install System Dependencies
         run: |
           sudo apt-get update -y
@@ -71,10 +54,12 @@ jobs:
           mv inventory.ini ./ansible/inventory/hosts
 
       - name: Prepare Ansible Configurations
+        working-directory: ansible/project
         run: |
           bash add_known_hosts.sh
 
       - name: Run Ansible Bootstrap
+        working-directory: ansible/project
         run: |
           which debops
           debops run bootstrap -l amazon
