--- a/.github/workflows/run-debops-docker.yml
+++ b/.github/workflows/run-debops-docker.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Prepare Ansible Configurations
         working-directory: ansible/project
         run: |
+          mkdir -p $HOME/.ssh
           bash add_known_hosts.sh
 
       - name: Install DebOps
