--- a/.github/workflows/run-debops-docker.yml
+++ b/.github/workflows/run-debops-docker.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Set up SSH agent
         run: |
+          mkdir -p $HOME/.ssh
+          chmod 700 $HOME/.ssh        
           # Start the SSH agent
           eval $(ssh-agent -s)
           # Add the SSH private key to the agent
