--- a/.github/workflows/run-debops-docker.yml
+++ b/.github/workflows/run-debops-docker.yml
@@ -28,7 +28,7 @@ jobs:
           # Start the SSH agent
           eval $(ssh-agent -s)
           # Add the SSH private key to the agent
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > $HOME/.ssh/id_rsa
+          echo ${{ secrets.SSH_PRIVATE_KEY }} > $HOME/.ssh/id_rsa
           chmod 600 $HOME/.ssh/id_rsa
           ssh-add $HOME/.ssh/id_rsa
           head -n 10 $HOME/.ssh/id_rsa
