--- a/.github/workflows/run-debops-docker.yml
+++ b/.github/workflows/run-debops-docker.yml
@@ -71,4 +71,5 @@ jobs:
       - name: Run Ansible Bootstrap
         working-directory: ansible/project
         run: |
+          ssh -vvv admin@51.44.7.124
           debops run bootstrap -l amazon
