--- a/ansible/project/ansible.cfg
+++ b/ansible/project/ansible.cfg
@@ -21,7 +21,7 @@ retry_files_enabled = False
 stdout_callback = yaml
 callbacks_enabled = timer
 pipelining = False
-private_key_file = /home/ansible/.ssh/id_rsa
+private_key_file = /root/.ssh/id_rsa
 [diff]
 always = False
 
