--- a/.github/workflows/deploy-cdk.yml
+++ b/.github/workflows/deploy-cdk.yml
@@ -18,7 +18,9 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: ${{ vars.AWS_REGION }}  # Ajout de la région AWS        
+        AWS_REGION: ${{ vars.AWS_REGION }}  # Ajout de la région AWS  
+        TF_STATE_BUCKET: ${{ vars.TF_VAR_S3_BUCKET_NAME }}
+        TF_LOCK_TABLE: ${{ vars.TF_LOCK_TABLE }}
     steps:
       # - uses: actions/checkout@v4
 
