--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Check if build is needed
         id: check-changes
         run: |
+          # Récupérer les changements entre le dernier commit et celui actuellement référencé
+          git fetch origin ${{ github.base_ref }} ${{ github.head_ref }} # Assure la récupération correcte des deux refs
+
+          git diff --name-only origin/${{ github.base_ref }}..origin/${{ github.head_ref }}
+
           if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q 'Dockerfile\|build/'; then
             echo "build_required=true" >> $GITHUB_ENV
             echo "build_required=true" >> $GITHUB_OUTPUT
