--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -27,6 +27,9 @@ jobs:
     outputs:
       build_required: ${{ steps.check-changes.outputs.build_required }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3  # Checkout le code dans le répertoire de travail
+
       - name: Check if build is needed
         id: check-changes
         run: |
