--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -43,8 +43,20 @@ jobs:
       - name: Check if build is needed
         id: check-changes
         run: |
-          # Comparer les changements entre les deux commits (avant et après).
-          git diff --name-only origin/${{ github.base_ref }} origin/${{ github.head_ref }}
+          # Vérification des refs, utilisation de 'main' par défaut si vide
+          BASE_REF=${{ github.base_ref }}
+          HEAD_REF=${{ github.head_ref }}
+          
+          if [ -z "$BASE_REF" ]; then
+            BASE_REF="main"  # Utilisation de 'main' si base_ref est vide
+          fi
+
+          if [ -z "$HEAD_REF" ]; then
+            HEAD_REF="main"  # Utilisation de 'main' si head_ref est vide
+          fi
+
+          # Comparer les changements entre les deux commits (avant et après)
+          git diff --name-only origin/${BASE_REF} origin/${HEAD_REF}
 
           # Vérifier si un Dockerfile ou des fichiers dans 'build/' ont changé
           if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q 'Dockerfile\|build/'; then
@@ -54,6 +66,7 @@ jobs:
             echo "build_required=false" >> $GITHUB_ENV
             echo "build_required=false" >> $GITHUB_OUTPUT
           fi
+
 
 
   build-cdk:
