--- a/terraform/docker-compose.yml
+++ b/terraform/docker-compose.yml
@@ -11,3 +11,4 @@ services:
       - "TF_VAR_vpc_id=$TF_VAR_vpc_id"
       - "TF_VAR_ssh_key_name=$TF_VAR_ssh_key_name"
       - "TF_VAR_s3_bucket_name=$TF_VAR_s3_bucket_name"
+      - "TF_VAR_vm_count=$TF_VAR_vm_count"
