--- a/ansible/project/.debops.cfg
+++ b/ansible/project/.debops.cfg
@@ -36,7 +36,7 @@ callbacks_enabled = timer
 # implications for 'become' operations - the 'requiretty' option in
 # /etc/suders must be disabled for pipelining to work correctly.
 pipelining = false
-private_key_file = /home/ansible/.ssh/id_rsa
+private_key_file = /root/.ssh/id_rsa
 
 [ansible diff]
 
